syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "blog/server";

message LoginBloggerRequest {
    string username = 1;
    string password = 2;
}

message LoginBloggerResponse {
    string session_id = 2;
    string access_token = 3;
    string refresh_token = 4;
    google.protobuf.Timestamp access_token_expires_at = 5;
    google.protobuf.Timestamp refresh_token_expires_at = 6;
}
